--- a/Estilos/Estilo1.css
+++ b/Estilos/Estilo1.css
@@ -8,6 +8,35 @@
        text-align: center;
    }
 
+ #TITULOS{
+    color: yellowgreen;
+    background-image:linear-gradient(rgb(59, 59, 141) 25px, rgb(131, 60, 60) 60px);
+    height: 5px, 5px;
+    width: 158px;
+
+    text-align: left;
+    font-style:italic;
+    line-height:50px;
+    font-size: 7px;
+    margin-bottom: 100px auto;
+ }
+
+ #cuerpo{
+    font-family:Arial, Helvetica, sans-serif;
+    background-image:linear-gradient(rgb(46, 46, 87) 25%, rgb(68, 68, 68) 50%);
+ }
+
+
+#footer{
+    font-style: italic;
+    font-size: 11px;
+}
 
 
 
+ img {
+    
+    padding-left: 500px;
+    width: 180px;
+
+ }
