--- a/Estilos/Estilo1.css
+++ b/Estilos/Estilo1.css
@@ -4,21 +4,74 @@
     
 
    .pepe{
-       color: rgb(0, 0, 0);
-       text-align: center;
+
+      color: rgb(0, 2, 136);
+      background-image:linear-gradient(rgb(59, 59, 141) 25px, rgb(131, 60, 60) 60px);
+
+      text-align: center;
+      
+      line-height: 50px;
+      margin-bottom: 100px auto;
+      border-radius: 100%;
+
+      box-sizing: content-box; width: 100%;border: solid #000000 10px; padding: 20px;
+
+      height: 100px;
+      width: 500px;
+
+      margin-left: 36%;
+      padding-bottom: 10px;
+
    }
 
- #TITULOS{
+
+
+   .pepe2{
+
+      color: rgb(0, 2, 136);
+      background-image:linear-gradient(rgb(59, 59, 141) 25px, rgb(131, 60, 60) 60px);
+
+      text-align: center;
+      
+      line-height: 30px;
+      margin-bottom: 100px auto;
+      border-radius: 100%;
+
+      box-sizing: content-box; width: 100%;border: solid #000000 10px; padding: 5px;
+
+      height: 50px;
+      width: 500px;
+
+      margin-left: 36%;
+      margin-bottom: 3%;
+      padding-bottom: 10px;
+
+   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ .TITULOS{
     color: yellowgreen;
     background-image:linear-gradient(rgb(59, 59, 141) 25px, rgb(131, 60, 60) 60px);
     height: 5px, 5px;
-    width: 158px;
+    width: 435px;
 
     text-align: left;
     font-style:italic;
     line-height:50px;
-    font-size: 7px;
-    margin-bottom: 100px auto;
+    font-size: 5px; 
+    margin-bottom: 100px auto;   
 
     border-radius: 50%;
  }
@@ -26,7 +79,8 @@
  #cuerpo{
     font-family:Arial, Helvetica, sans-serif;
     background-image:linear-gradient(rgb(46, 46, 87) 25%, rgb(68, 68, 68) 50%);
- }
+    text-shadow: 0px 5px 2px rgb(0, 0, 0);
+    }
 
 
 #footer{
@@ -35,15 +89,92 @@
 }
 
 
+#parrafo{
 
- img {
+   color: rgb(138, 0, 0);
+   text-align: justify;
+   text-align: center;
+   line-height: 50px;
+   font-family:Arial, Helvetica, sans-serif;
+   font-style:italic;
+   margin-bottom: 2%;
+   margin-top: 3%;
+   
+
+}
+
+
+
+
+
+#img1 {
     
-    padding-left: 540px;
-    height: 180px;
-    width: 180px;
-    /* border-radius: 50%; */
+    padding-top: 50%;
+    height: 400px;
+    width: 400px;
+    display: block;
+  
+    border-radius: 50%; 
+    border: 15px solid rgb(5, 1, 1);
+  
+    margin-left: 1000px;
 
+
+    padding: 0%;
     
+   
+    display: block;
+    margin: auto;
 
+
+}
+
+#img2 {
+    
+   padding-top: 50%;
+   height: 400px;
+   width: 400px;
+   display: block;
+ 
+   border-radius: 50%; 
+   border: 15px solid rgb(5, 1, 1);
+ 
+   margin-left: 500px;
+
+
+
+   padding: 0%;
+   
+   display: block;
+   margin: auto;
+   
+
+
+}
+
+
+
+
+
+
+
+
+
+.btn{
+
+   display: inline-block; 
+   margin-top: 100px;
+   
+   margin-left: 820px;     
+   padding: 10px 40px;
+   border: 2px solid #000000;     
+   color: #fff;     
+   font-weight: bold;     
+   text-decoration: none;
+   background: #943535;
+
+
+ 
+   
 
 }
